# SalaryManageSystem

./: CMakeLists.txt
OpenXLSX/: CMakeLists.txt
src/: CMakeLists.txt  SalarManageSystem.cpp  SalaryManageSystemNew.cpp  balance_calculate.cpp  balance_calculate.h  celltypecheck.cpp  data_define.cpp  data_define.h  file_action.cpp  file_action.h  main.cpp  record_manage.cpp  record_manage.h  test.cpp  typecheck.h
